2007-09-28  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/baseweb.py (OneBoxPerBuilder): make this page
	respect branch= queryargs, by restricting the builds displayed to
	those matching the given branch names
	* buildbot/status/web/waterfall.py (BuildTopBox): same

	* buildbot/test/test_web.py (WaterfallSteps.test_urls.FakeRequest):
	fix a test failure by adding .prepath to this fake object

	* buildbot/status/web/*: big set of changes to WebStatus, cleaning
	up generation of relative URLs. With luck, this should play with
	reverse proxies much better now.
	* buildbot/test/test_webparts.py: new test for most of the subpages
	* buildbot/test/test_web.py (base_config): add enough of a config
	to exercise more Waterfall code

2007-09-27  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/build.py (StatusResourceBuild.body): use a
	relative URL to the buildbot welcome page, rather than
	getBuildbotURL.
	* buildbot/status/web/builder.py (StatusResourceBuilder.body): same

	* buildbot/status/web/base.py (HtmlResource.title): change the
	default title of all Buildbot-generated page to "Buildbot"
	* buildbot/status/web/builder.py (StatusResourceBuilder.getTitle):
	change the title to include the Builder name
	* buildbot/status/web/build.py (StatusResourceBuild.getTitle):
	same, and also show the build number
	(StatusResourceBuild.rebuild): after using the 'Rebuild' button,
	redirect the browser to the Builder page

2007-09-26  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/baseweb.py (OneBoxPerBuilder.body): fix URL
	problem with the build links

2007-09-25  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (HtmlResource.render): fix addSlash
	to emit relative URLs instead of using URLPath,

	* docs/buildbot.texinfo (WebStatus): provide an example

	* buildbot/status/web/baseweb.py (OneBoxPerBuilder): new status
	page, shows a simple table with one row per Builder. Still pretty
	ugly, but functional.